Update Scala version to 2.13.18 and add JVM options for Spark compatibility; configure VS Code for Metals debugging and custom run task